Update and rename python-app.yml to scraper-ci.yml

--- a/.github/workflows/scraper-ci.yml
+++ b/.github/workflows/scraper-ci.yml
@@ -6,6 +6,7 @@ name: Scraper CI Check
 on:
   pull_request:
     types: ["opened", "edited"]
+  workflow_dispatch:
 
 permissions:
   contents: read
