--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,9 @@ MANIFEST
 pip-log.txt
 pip-delete-this-directory.txt
 
+# Local environment
+Pipfile
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
